Scaffolding added to section1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         </div>
         <div class="content-contatiner">
             <div class="section1">
-
+                <div class="awesomeness-blurb">
+                    <p>This website is awesome</p>
+                    <p>This website has some subtext that goes here under the 
+                        main title. It's a smaller font and the color is lower contrast.
+                    </p>
+                    <button>Sign up</button>
+                </div>
+                <div class="image-area">
+                    this is a placeholder for an image
+                </div>
             </div>
             <div class="section2">
 
@@ -28,7 +37,7 @@
             </div>
         </div>
         <div class="footer">
-            
+
         </div>
     </body>
 </html>
