--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
                 </div>
             </div>
             <div class="section2">
-
+                <div class="random-info">Some random information.</div>
+                <div class="small-image"></div>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <div class="small-image"></div>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <div class="small-image"></div>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <div class="small-image"></div>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
             </div>
             <div class="section3">
 
