Scaffolding added to section4

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
                 <p class="quote-author">-Thor, God of Thunder</p>
             </div>
             <div class="section4">
-
+                <div class="blue-box">
+                    <p class="bold-blue-box">Call to action! It's time!</p>
+                    <p class="faint-blue-box">Sign up for our product by clicking that 
+                        button right over there!
+                    </p>
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
         <div class="footer">
