Text added for footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="footer">
-
+            Layout Idea: The Odin Project 2021
         </div>
     </body>
 </html>
