Names for buttons added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p>This website has some subtext that goes here under the 
                         main title. It's a smaller font and the color is lower contrast.
                     </p>
-                    <button>Sign up</button>
+                    <button class="button1">Sign up</button>
                 </div>
                 <div class="image-area">
                     this is a placeholder for an image
@@ -59,7 +59,7 @@
                     <p class="faint-blue-box">Sign up for our product by clicking that 
                         button right over there!
                     </p>
-                    <button>Sign up</button>
+                    <button class="button2">Sign up</button>
                 </div>
             </div>
         </div>
