--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="header">
+            <div class="header-logo">Header logo</div>
             <ul class="header-links">
                 <li>header link one</li>
                 <li>header link two</li>
