In section 1, classes section1-bold and section-1-subtext added

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="content-contatiner">
             <div class="section1">
                 <div class="awesomeness-blurb">
-                    <p>This website is awesome</p>
-                    <p>This website has some subtext that goes here under the 
+                    <p class="section1-bold">This website is awesome</p>
+                    <p class="section1-subtext">This website has some subtext that goes here under the 
                         main title. It's a smaller font and the color is lower contrast.
                     </p>
                     <button class="button1">Sign up</button>
