--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     <button class="button1">Sign up</button>
                 </div>
                 <div class="image-area">
-                    this is a placeholder for an image
+                    <div class="grey-box">
+                        <p>this is a placeholder for an image</p>
+                    </div>
                 </div>
             </div>
             <div class="section2">
