--- a/index.html
+++ b/index.html
@@ -1,74 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Landing Page</title>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="header">
-            <div class="header-logo">Header logo</div>
-            <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
-        <div class="content-contatiner">
-            <div class="section1">
-                <div class="awesomeness-blurb">
-                    <p class="section1-bold">This website is awesome</p>
-                    <p class="section1-subtext">This website has some subtext that goes here under the 
-                        main title. It's a smaller font and the color is lower contrast.
-                    </p>
-                    <button class="button1">Sign up</button>
-                </div>
-                <div class="image-area">
-                    <div class="grey-box">
-                        <p>this is a placeholder for an image</p>
-                    </div>
-                </div>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="header">
+        <div class="header-logo">Header logo</div>
+        <ul class="header-links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="content-contatiner">
+        <div class="section1">
+            <div class="awesomeness-blurb">
+                <p class="section1-bold">This website is awesome</p>
+                <p class="section1-subtext">This website has some subtext that goes here under the
+                    main title. It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="button1">Sign up</button>
             </div>
-            <div class="section2">
-                <div class="random-info">Some random information.</div>
-                <div class="small-image"></div>
-                <p class="small-image-message">
-                    this is some subtext under an illustration or image
-                </p>
-                <div class="small-image"></div>
-                <p class="small-image-message">
-                    this is some subtext under an illustration or image
-                </p>
-                <div class="small-image"></div>
-                <p class="small-image-message">
-                    this is some subtext under an illustration or image
-                </p>
-                <div class="small-image"></div>
-                <p class="small-image-message">
-                    this is some subtext under an illustration or image
-                </p>
-            </div>
-            <div class="section3">
-                <p class="quote">
-                    This is an inspiring quote, or a testimonial from a customer.
-                    Maybe it's just filling up space, or maybe people will actually
-                    read it. Who knows? All I know is that it looks nice.
-                </p>
-                <p class="quote-author">-Thor, God of Thunder</p>
-            </div>
-            <div class="section4">
-                <div class="blue-box">
-                    <p class="bold-blue-box">Call to action! It's time!</p>
-                    <p class="faint-blue-box">Sign up for our product by clicking that 
-                        button right over there!
-                    </p>
-                    <button class="button2">Sign up</button>
+            <div class="image-area">
+                <div class="grey-box">
+                    <p>this is a placeholder for an image</p>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            Layout Idea: The Odin Project 2021
+        <div class="section2">
+            <div class="random-info">Some random information.</div>
+            <div class="small-image-wrapper">
+                <div class="small-image"></div>
+                <div class="small-image"></div>
+                <div class="small-image"></div>
+                <div class="small-image"></div>
+            </div>
+            <div class="subtext-wrapper">
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+                <p class="small-image-message">
+                    this is some subtext under an illustration or image
+                </p>
+            </div>
         </div>
-    </body>
+        <div class="section3">
+            <p class="quote">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+        <div class="section4">
+            <div class="blue-box">
+                <p class="bold-blue-box">Call to action! It's time!</p>
+                <p class="faint-blue-box">Sign up for our product by clicking that
+                    button right over there!
+                </p>
+                <button class="button2">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        Layout Idea: The Odin Project 2021
+    </div>
+</body>
+
 </html>
