--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Roboto:ital,wght@1,300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -56,22 +58,27 @@
             </div>
         </div>
         <div class="section3">
-            <p class="quote">
-                This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.
-            </p>
-            <p class="quote-author">-Thor, God of Thunder</p>
+            <div class="quote-wrapper">
+                <p class="quote">
+                    "This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually
+                    read it. Who knows? All I know is that it looks nice."
+                <p class="quote-author">-Thor, God of Thunder</p>
+                </p>
+            </div>
         </div>
         <div class="section4">
             <div class="blue-box">
-                <p class="bold-blue-box">Call to action! It's time!</p>
-                <p class="faint-blue-box">Sign up for our product by clicking that
-                    button right over there!
-                </p>
+                <div class="blue-box-text">
+                    <p class="bold-blue-box">Call to action! It's time!</p>
+                    <p class="faint-blue-box">Sign up for our product by clicking that
+                        button right over there!
+                    </p>
+                </div>
                 <button class="button2">Sign up</button>
             </div>
         </div>
+    </div>
     </div>
     <div class="footer">
         Layout Idea: The Odin Project 2021
